--- a/notebooks/01-estatistica-descritiva.ipynb
+++ b/notebooks/01-estatistica-descritiva.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "5182679a-c236-4b10-a65f-c04faa933ec0",
    "metadata": {
     "tags": []
@@ -22,8 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2311e7be-a2a6-41dc-8a20-d42db55ffddf",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Conjunto de Dados - Pinguins"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "30668d9a-5f4a-4254-89a1-7785f01445e9",
    "metadata": {},
    "outputs": [],
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3c1dd070-ed5b-4147-9704-2226d1670daf",
    "metadata": {
     "tags": []
@@ -215,7 +225,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "9edf3e47-82e3-431e-8263-05f8052f21dc",
    "metadata": {
     "tags": []
@@ -313,7 +323,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>sex</td>\n",
-       "      <td></td>\n",
+       "      <td>Sexo do pinguin</td>\n",
        "      <td>qualitativa</td>\n",
        "      <td>nominal</td>\n",
        "    </tr>\n",
@@ -329,7 +339,7 @@
        "3      bill_depth_mm      Profundidade do bico do pinguin em milimetros   \n",
        "4  flipper_length_mm  Comprimento da nadadeira do pinguin em milimetros   \n",
        "5        body_mass_g                          Peso do pinguin em gramas   \n",
-       "6                sex                                                      \n",
+       "6                sex                                    Sexo do pinguin   \n",
        "\n",
        "           tipo   subtipo  \n",
        "0   qualitativa   nominal  \n",
@@ -341,7 +351,7 @@
        "6   qualitativa   nominal  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +390,7 @@
     "\"subtipo\":\"continua\",\n",
     "},{\n",
     "\"variavel\":\"sex\",\n",
-    "\"descricao\":\"\",\n",
+    "\"descricao\":\"Sexo do pinguin\",\n",
     "\"tipo\":\"qualitativa\",\n",
     "\"subtipo\":\"nominal\",\n",
     "}\n",
@@ -389,17 +399,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bdafdff-0cd6-4f6e-a732-cc0c946b0a83",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Estatisticas qualitativas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57f93333-7ea0-4921-98da-8f2265fe2ff2",
+   "execution_count": 16,
+   "id": "f206b75f-742c-4476-b6e8-20c982fe157a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  species  island   sex\n",
+       "0  Adelie  Biscoe  Male"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['species','island','sex']].mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57f34771-4935-489b-ad39-17f4c22abdbe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Estatisticas quantitativas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7a8892bd-e588-4ad2-a605-6cd3e49461a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>43.921930</td>\n",
+       "      <td>17.151170</td>\n",
+       "      <td>200.915205</td>\n",
+       "      <td>4201.754386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.459584</td>\n",
+       "      <td>1.974793</td>\n",
+       "      <td>14.061714</td>\n",
+       "      <td>801.954536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>32.100000</td>\n",
+       "      <td>13.100000</td>\n",
+       "      <td>172.000000</td>\n",
+       "      <td>2700.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>39.225000</td>\n",
+       "      <td>15.600000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>3550.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.450000</td>\n",
+       "      <td>17.300000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>4050.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.500000</td>\n",
+       "      <td>18.700000</td>\n",
+       "      <td>213.000000</td>\n",
+       "      <td>4750.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>59.600000</td>\n",
+       "      <td>21.500000</td>\n",
+       "      <td>231.000000</td>\n",
+       "      <td>6300.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bill_length_mm  bill_depth_mm  flipper_length_mm  body_mass_g\n",
+       "count      342.000000     342.000000         342.000000   342.000000\n",
+       "mean        43.921930      17.151170         200.915205  4201.754386\n",
+       "std          5.459584       1.974793          14.061714   801.954536\n",
+       "min         32.100000      13.100000         172.000000  2700.000000\n",
+       "25%         39.225000      15.600000         190.000000  3550.000000\n",
+       "50%         44.450000      17.300000         197.000000  4050.000000\n",
+       "75%         48.500000      18.700000         213.000000  4750.000000\n",
+       "max         59.600000      21.500000         231.000000  6300.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8892bd-e588-4ad2-a605-6cd3e49461a6",
+   "id": "e35fd063-328e-4e37-a818-6931237953f7",
    "metadata": {},
    "outputs": [],
    "source": []
