atualizando atividade de estatisticas

--- a/notebooks/01-estatistica-descritiva.ipynb
+++ b/notebooks/01-estatistica-descritiva.ipynb
@@ -25,7 +25,6 @@
    "cell_type": "markdown",
    "id": "8f4bf751-4c94-4d59-bf45-3554f02849f6",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1634,7 +1633,7 @@
     "tags": []
    },
    "source": [
-    "## Conjunto de Dados - Tips"
+    "## Conjunto de Dados - Tips (Gorjetas)"
    ]
   },
   {
@@ -1828,14 +1827,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc9914bb-92c5-4f71-9509-cce80c6488ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d7475233-4163-4696-a78f-7db764590f13",
    "metadata": {
@@ -1847,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "90a865f9-da88-448d-aead-511f3e8fc174",
    "metadata": {
     "tags": []
@@ -1913,8 +1904,8 @@
        "      <th>4</th>\n",
        "      <td>day</td>\n",
        "      <td>Dia da semana('Thur','Fri','Sat','Sun')</td>\n",
-       "      <td>quantitativa</td>\n",
-       "      <td>continua</td>\n",
+       "      <td>qualitativa</td>\n",
+       "      <td>ordinal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1940,12 +1931,12 @@
        "1         tip                         Valor da gorjeta  quantitativa  continua\n",
        "2         sex                          sexo do cliente   qualitativa   nominal\n",
        "3      smoker   Indicação se a pessoa é ou não fumante   qualitativa   nominal\n",
-       "4         day  Dia da semana('Thur','Fri','Sat','Sun')  quantitativa  continua\n",
+       "4         day  Dia da semana('Thur','Fri','Sat','Sun')   qualitativa   ordinal\n",
        "5        time       Hora da refeição('Dinner','Lunch')   qualitativa   nominal\n",
        "6        size            Quantidade de pessoas na mesa  quantitativa  continua"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,8 +1966,8 @@
     "},{\n",
     "\"variavel\":\"day\",\n",
     "\"descricao\":\"Dia da semana('Thur','Fri','Sat','Sun')\",\n",
-    "\"tipo\":\"quantitativa\",\n",
-    "\"subtipo\":\"continua\",\n",
+    "\"tipo\":\"qualitativa\",\n",
+    "\"subtipo\":\"ordinal\",\n",
     "},{\n",
     "\"variavel\":\"time\",\n",
     "\"descricao\":\"Hora da refeição('Dinner','Lunch')\",\n",
@@ -2004,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "3f21f66b-ce47-4289-9b02-3b690d4c7815",
    "metadata": {
     "tags": []
@@ -2054,7 +2045,7 @@
        "0  Male     No  Sat  Dinner"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "a7a5027d-c383-40ec-982a-e60a1317a532",
    "metadata": {
     "tags": []
@@ -2170,7 +2161,7 @@
        "max     50.810000   10.000000    6.000000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "1d86a3bf-8351-4473-a23c-86a1c175240c",
    "metadata": {
     "tags": []
